--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #999;
+  background-color: #d8d8d8;
 }
 
 .game-grid:hover {
