--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,41 @@
-.game {
-  display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 100px);
-  gap: 1px;
+.board {
+  width: 400px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
+  gap: 1px;
 }
-
-.game-grid {
+.square {
+  font-size: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #d8d8d8;
+  border: 1px solid black;
+  width: 100px;
+  height: 100px;
 }
 
-.game-grid:hover {
-  background-color: wheat;
+.square:hover {
+  background-color: beige;
   cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modalContent {
+  background-color: #fefefe;
+  margin: 50% auto;
+  padding: 20px;
+  width: 50%;
 }
