--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,22 @@
+* {
+  font-family: Raleway;
+  font-weight: 900;
+  color: #3e3b38;
+  margin: 0;
+}
+
+.main {
+  padding-top: 50px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff7eb;
+  gap: 30px;
+}
+
 .board {
-  width: 400px;
+  width: 320px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -7,7 +24,8 @@
   gap: 1px;
 }
 .square {
-  font-size: 4rem;
+  font-size: 5rem;
+  color: #d65a47;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,4 +56,18 @@
   margin: 50% auto;
   padding: 20px;
   width: 50%;
+}
+
+button {
+  padding: 10px 30px;
+  background-color: #d65a47;
+  color: #fff7eb;
+  border: none;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #3e3b38;
+  color: #d65a47;
+  cursor: pointer;
 }
