--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 
 h1 {
   font-size: 5rem;
+  letter-spacing: -2px;
 }
 
 .main {
@@ -32,7 +33,8 @@ h1 {
 }
 .square {
   background-color: hsl(30, 5%, 23%);
-  font-size: 5rem;
+  font-size: 6rem;
+  font-weight: 900;
   color: #d65a47;
   display: flex;
   justify-content: center;
@@ -68,6 +70,7 @@ h1 {
 }
 
 button {
+  font-weight: 600;
   padding: 10px 30px;
   background-color: #d65a47;
   color: #fff7eb;
@@ -76,7 +79,7 @@ button {
 }
 
 button:hover {
-  background-color: #3e3b38;
-  color: #d65a47;
   cursor: pointer;
+  color: #d65a47;
+  background-color: #3e3b38;
 }
