--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
+  background-color: #fff7eb;
   font-family: Raleway;
   font-optical-sizing: auto;
   font-weight: 900;
@@ -9,17 +10,18 @@
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 4rem;
   letter-spacing: -2px;
+  text-underline-offset: 1px;
+  text-decoration: underline solid #d65a47;
+  text-decoration-thickness: 30%;
 }
 
 .main {
-  padding-top: 50px;
-  height: 100vh;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fff7eb;
   gap: 30px;
 }
 
@@ -46,27 +48,18 @@ h1 {
 }
 
 .square:hover {
-  background-color: hsl(30, 5%, 35%);
+  background-color: hsl(30, 5%, 30%);
   cursor: pointer;
 }
 
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+.messageDisplay {
+  font-size: 3rem;
 }
 
-.modalContent {
-  background-color: #fefefe;
-  margin: 50% auto;
-  padding: 20px;
-  width: 50%;
+.turnDisplay {
+  font-size: 2rem;
+  font-weight: 300;
+  height: 20px;
 }
 
 button {
