formatting CSS & HTML better for mobile

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@
   margin: 0;
 }
 
+a {
+  font-weight: 400;
+  color: #d65a47;
+}
+
 h1 {
   font-size: 3.5rem;
   letter-spacing: -2px;
@@ -17,12 +22,43 @@ h1 {
   text-decoration-thickness: 30%;
 }
 
+.buttons-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  gap: 10px;
+}
+
+.buttons-container > button {
+  font-weight: 600;
+  padding: 10px 30px;
+  background-color: #d65a47;
+  color: #fff7eb;
+  border: none;
+  border-radius: 5px;
+}
+
+.buttons-container > button:hover {
+  cursor: pointer;
+  color: #d65a47;
+  background-color: #3e3b38;
+}
+
 .main {
-  padding: 50px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  overflow: hidden;
+}
+
+.header {
+  position: relative;
+  top: 10px;
+  width: 100%;
+  text-align: center;
 }
 
 .board {
@@ -33,6 +69,7 @@ h1 {
   justify-content: center;
   gap: 2px;
 }
+
 .square {
   background-color: hsl(30, 5%, 23%);
   font-size: 6rem;
@@ -59,7 +96,8 @@ h1 {
 }
 
 .messageDisplay {
-  font-size: 3rem;
+  font-size: 2rem;
+  display: flex;
 }
 
 .turnDisplay {
@@ -68,17 +106,13 @@ h1 {
   height: 20px;
 }
 
-button {
-  font-weight: 600;
-  padding: 10px 30px;
-  background-color: #d65a47;
-  color: #fff7eb;
-  border: none;
-  border-radius: 5px;
-}
-
-button:hover {
-  cursor: pointer;
-  color: #d65a47;
-  background-color: #3e3b38;
+.footer {
+  font-size: 1rem;
+  font-weight: 400;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
 }
