More style adjustments, gradient bg

--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-  background-color: #fff7eb;
   font-family: Raleway;
-  font-optical-sizing: auto;
   font-weight: 900;
   color: #3e3b38;
   margin: 0;
 }
 
 a {
-  font-weight: 400;
+  font-weight: 700;
   color: #d65a47;
-}
-
-h1 {
-  font-size: 3.5rem;
-  letter-spacing: -2px;
-  text-underline-offset: 1px;
-  text-decoration: underline solid #d65a47;
-  text-decoration-thickness: 30%;
 }
 
 .buttons-container {
@@ -46,19 +36,26 @@ h1 {
 }
 
 .main {
-  padding: 10px;
+  background-image: linear-gradient(to bottom, #ffedd1, #f0d8b1);
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
-  overflow: hidden;
+  gap: 20px;
 }
 
 .header {
-  position: relative;
-  top: 10px;
+  font-size: 2rem;
+  letter-spacing: -2px;
+  text-underline-offset: 1px;
+  text-decoration: underline solid #d65a47;
+  text-decoration-thickness: 30%;
   width: 100%;
+  height: 100px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .board {
@@ -107,7 +104,8 @@ h1 {
 }
 
 .footer {
-  font-size: 1rem;
+  background-color: hsl(37, 78%, 82%);
+  font-size: 0.75rem;
   font-weight: 400;
   position: fixed;
   bottom: 0;
